dropdown overflow fix

--- a/resources/screen.css
+++ b/resources/screen.css
@@ -192,7 +192,7 @@ img {
 
 .body-dropdown-wrapper {
     position:relative;
-    width:300px;
+    width:400px;
     height:40px;
     float: right;
 }
